--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 * ETL:
 * SCHEMA:
   - nueva tabla de status messages + lags
+* INFORMES
+  - ultimos 10 maximas voltages con sus unidades
+  - ultimos 10 minmas voltages con susu unidades
 * Servicio en Windows
 * Instalador en Windows
+
 * Interesante para la Pi SD card block size
   https://www.raspberrypi.org/forums/viewtopic.php?t=11258&p=123670
   http://3gfp.com/wp/2014/07/formatting-sd-cards-for-speed-and-lifetime/
