--- a/TODO
+++ b/TODO
@@ -1,15 +1,23 @@
-* ETL:
-   - reload: alternativa para Windows ????
-* SCHEMA:
-- borrado periodico de la tabla  RealTimeStatus
+* flush() on_hold()
+* mejorar el emadbload para que acepte parametros
+* Introducir DDDº MM' SS"
+* No cascar la BD cunado hay un error de insercion por locking
+* mejorar README.dm
+  - describir los parametros reloadables
+  - nuevo pararmetro reloadable dbase_year
+  - seccion de operacion
+    - arranque / parada / restart (=> cuando es nrecesraio restart)
+    - reload en caliente
+    - vacuum a mano
+* Ya se por que casca el Ansible con el restart. Tiene  que ver con el nombre
+del servicion. Mejorar el script del servicio
+
+* reload: alternativa para Windows ????
+* borrado periodico de la tabla  RealTimeStatus
   - ¡ solo si tinee datos ! 
   - a las 00::00 UTC
   - work() se ejecuta cada 5 minutos
   - cleanup() borra filas las filas cuya date_id < current_date  
-- VACUUM
-  - ¡ solo si ha actividad de borrado !
-  - con un objeto Alarmable2, retrigereable ¿ cada cuantos segndos? 
-  - poner la bd on_hold()
 * SCHEMA:
   - tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
