--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Año final de la dimension Date configurable
 * No cascar la BD cunado hay un error de insercion por locking
 * mejorar README.dm
   - describir los parametros reloadables
@@ -10,12 +11,6 @@
 del servicion. Mejorar el script del servicio
 
 * reload: alternativa para Windows ????
-* borrado periodico de la tabla  RealTimeStatus
-  - ¡ solo si tinee datos ! 
-  - a las 00::00 UTC
-  - work() se ejecuta cada 5 minutos
-  - cleanup() borra filas las filas cuya date_id < current_date  
-* SCHEMA:
   - tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
 * INFORMES
