--- a/TODO
+++ b/TODO
@@ -1,24 +1,18 @@
-* Servicio en Windows
-  Ya se como lo voy a hacer, No se usa Server.run() sino server.step() 
-  y el bucle principal lo hare en el cpodigo del servicio, incluyendo
-  el conjuro ese de procesado de eventos y dando a cada cosa un timeout/2
-  Y el server.stop() al SvcStop()
+* Renombrar rain_probability a wet y hacer la migracion de datos con on_hold
+* winserver y posixserver
+* Vista RTNow
 
-  para la EMA, quizas se pieda parchear el metodo step() para hacer
-  uno a medida que icnluya el puerto serie , tal y como he hecho
-  con el verbose
-
-* INFORMES
+CONSULTAS
   - subdirectorio de queries 'sql/'
   - Rango de fechas disponible en RealTimeSamples
   - ¿ Cuando estuvo el aux relay abierto ?
-    
+  - ¿ Esta lloviendo ahora ?
 
 * ¿ Que pasa con el NTP ?
 
 * Instalador en Windows
 * reload: alternativa para Windows ????
-  - tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
+* tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
 
 * Interesante para la Pi SD card block size
