--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@
   DATA_MODEL.md (explicar el modelo de datos, el modielaod dimensional, las
 condiciones de captura de la EMA (periodo integracion 5seg), el grano de cada tabla y un ejemplo de queries
 
+* Noevo server method pause() y quitarlo del config file
+
 CONSULTAS
   - subdirectorio de queries 'sql/'
   - rehacer la BD de tutorial
