--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+* Volver a poner Server.TIMEOUT a todo y quitar el fichero auxiliar
+* --foreground => --interactive
+* probar el arranque de uns ervicio en modo interactivo, a ver si así
+  funciona tambien
+
 * Winserver
   import server at runtime. Y en el __init__ detectar si crre como servicio
   pasar como args una lista de eventos: Stop, Pause y Reload
