--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
+* verificar la formula de la magnitud visual dada la frecuencia
+
 * tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
 
-* Winserver
-  Averigaur que espera windows tras hacer pause para luego poder 
- hacer el continuar
 
 *Actualizar README.md partiendolo en 3
   INSTALL.md (instalacion y configuracion para todas las plaaformas)
