--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+* Cambiar columnas de Units para doder usar natral joun => _units
+* Añadir un timestamp a la entrada de los mensajes del MQTT
+* Errores de transmision y exponnetial backoff
 * tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
 
@@ -10,6 +13,7 @@ condiciones de captura de la EMA (periodo integracion 5seg), el grano de cada ta
 
 
 CONSULTAS
+  - crear dos views de volcado de todo con o sin unidades
   - subdirectorio de queries 'sql/'
   - rehacer la BD de tutorial
   - Rango de fechas disponible en RealTimeSamples
