--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
-
+* Tabla de estadisticas de transacciones de historicos
+ - date, time, station, units, submitted, committed, tstamp
 
 *Actualizar README.md partiendolo en 3
   INSTALL.md (instalacion y configuracion para todas las plaaformas)
@@ -16,6 +17,7 @@ CONSULTAS
   - Rango de fechas disponible en RealTimeSamples
   - ¿ Cuando estuvo el aux relay abierto ?
   - ¿ Esta lloviendo ahora ?
+  - eficiencia de inseriones por estacion
 
 * Interesante para la Pi SD card block size
   https://www.raspberrypi.org/forums/viewtopic.php?t=11258&p=123670
