--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+* Tabla de RealTimePerformace con:
+ - Date, Time, Station, Type y campos como
+   timestamp, timestamp_oldest, num_samples, num_actual_samples, nbytes,
+   lag1 y lag2
+- Quitar todos los campos de performance deRealTimeSamples
+
 * tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
    esos datos desde la EMA
 
