--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
-* tabla de  messages cada 5 minutos, cuando tenga la manera de enviar
-   esos datos desde la EMA
+* Falta el campo de aver10m para el viento en todas las tablas:
+  - MinMaxHistory y AveragesHistory
+  - RealTimeStatus y RealTimeAverages
 
 *Actualizar README.md partiendolo en 3
   INSTALL.md (instalacion y configuracion para todas las plaaformas)
